lambda/tests/compile-fail/no-args.rs
#![feature(async_await)]

use lambda::lambda;

#[lambda]
#[tokio::main]
async fn main() {}
