lambda/tests/compile-fail/no-args.stderr
error: The #[lambda] macro can accept one or two arguments.
 --> $DIR/no-args.rs:5:1
  |
5 | #[lambda]
  | ^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  |
  = note: consider adding a `main` function to `$DIR/tests/compile-fail/no-args.rs`

For more information about this error, try `rustc --explain E0601`.
error: Could not compile `lambda-tests`.
